updated usemin path

--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="Web design, web development, mobile app, photography, marketing">
     <meta name="description" content="We create soul restoring journeys that inspire you to be you.">
 
-    <!-- build:css /assets/css/style.css -->
+    <!-- build:css assets/css/style.css -->
     <link rel="stylesheet" href="temp/css/style.css">
     <!-- endbuild -->
   </head>
@@ -487,7 +487,7 @@
       </div>
     </footer>
 
-    <!-- build:js /assets/scripts/App.js -->
+    <!-- build:js assets/scripts/App.js -->
     <script src="temp/scripts/App.js"></script>
     <!-- endbuild -->
 
