Solved overflow issue in container class

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
   <body>
 
     <header class="site-header">
-      <div class="container">
+      <div class="container container--overflow-visible">
         <div class="site-header__logo">
           <img class="site-header__logo__graphic" src="assets/images/logos/logo-white.png">
           <img class="site-header__logo__graphic site-header__logo__graphic--overlay" src="assets/images/logos/logo-dark.png">
